trying to fix deployment

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,12 @@
-FROM node:20
-
+FROM node:20 AS builder
 WORKDIR /app
-
 COPY package.json package-lock.json* ./
-RUN npm install
-
+RUN npm ci
 COPY . .
+RUN npm run build
 
-EXPOSE 3000
-
-CMD ["npm", "start"]
+FROM nginx:stable-alpine
+# Optional: copy a custom nginx.conf if you need SPA routing
+COPY --from=builder /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
