--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     environment:
       - FLASK_DEBUG=1
       - DB_PATH=/data/robot_logger.db
+      # For deployment only
+      - ALLOWED_ORIGINS=http://10.0.51.101:3000
     # restart: always
 
   frontend:
